--- a/docs/02-new-to-cardano/index.mdx
+++ b/docs/02-new-to-cardano/index.mdx
@@ -9,8 +9,5 @@ with blockchain and [Cardano](https://cardano.org/) in particular. In this
 section, we start our journey with basic concepts such as the notion of
 blockchain, understanding
 consensus, and what is a
-cryptocurrency. You will also find out how Cardano differs from other existing
-solutions, learn how to track blockchain activities, and understand why smart
-contracts matter. If you are new to Cardano, you will also find out information
-about various crypto wallets, their applicability with Cardano’s native currency
-ada, and how to purchase crypto.
+cryptocurrency. You will also find out about various types of wallets and tracking tools, and understand why smart
+contracts matter. 
