--- a/docs/03-learn/12-chain-confirmation-versus-transaction-confirmation.mdx
+++ b/docs/03-learn/12-chain-confirmation-versus-transaction-confirmation.mdx
@@ -3,7 +3,7 @@ title: Chain confirmation versus transaction confirmation
 metaTitle: Chain confirmation versus transaction confirmation
 ---
 
-When discussing [Cardano](https://cardano.org/), often-repeated questions are *what is Cardano’s transaction time?*, and *how many network confirmations does Cardano require before a transaction goes through?* The answers to these questions require a deeper look at the concepts of *chain confirmation* and *transaction confirmation*, and how these relate to the [protocol](https://docs.cardano.org/learn/ouroboros-overview).
+When discussing [Cardano](https://cardano.org/), often-repeated questions are *what is Cardano’s transaction time?*, and *how many network confirmations does Cardano require before a transaction goes through?* The answers to these questions require a deeper look at the concepts of *chain confirmation* and *transaction confirmation*, and how these relate to the Ouroboros protocol.
 
 ## Chain confirmation
 
