--- a/docs/16-release-notes/03-comp-matrix.mdx
+++ b/docs/16-release-notes/03-comp-matrix.mdx
@@ -12,8 +12,7 @@ dependencies on a particular version of
 does not reflect any stacks.) The compatibility matrix should be read in
 conjunction with the Cardano component dependencies definition.
 
-If you only require using the node, we recommend node version
-[8.1.2](https://github.com/input-output-hk/cardano-node/releases/tag/8.1.2).
+If you only require using the node, we recommend the latest node version.
 However, if you need to use all the compatible components, we recommend using
 version
 [1.35.7](https://github.com/input-output-hk/cardano-node/releases/tag/1.35.7).
