--- a/docs/04-explore-cardano/04-cardano-network/02-networking-protocol.mdx
+++ b/docs/04-explore-cardano/04-cardano-network/02-networking-protocol.mdx
@@ -15,7 +15,7 @@ for example, can open 1,024 connections per process, whereas macOS limits this
 number to 256. To avoid excessive use of resources and enable reliable means for
 connection establishment, Cardano uses a _multiplexer_.
 
-### Connection management
+## Connection management
 
 The network layer handles a range of specific tasks besides the exchange of
 block and transaction information required by the Ouroboros protocol.
@@ -32,13 +32,13 @@ following tasks:
 - shutting down the connection in case of an error
 - handling a shutdown request from the peer
 - shutting down the threads that run mini-protocols
-- closing a socket
+- closing a socket.
 
-### Multiplexing
+## Multiplexing
 
 The multiplexing layer acts as a central crossing between mini-protocols and the
 network channel. It runs several
-[mini-protocols](/explore-cardano/cardano-network#utilizingmini-protocols) in
+[mini-protocols](/explore-cardano/cardano-network/#utilizing-mini-protocols) in
 parallel in a single channel ‒ TCP connection, for example.
 
 Figure 1 reflects how data flows between two nodes, each running three
@@ -61,36 +61,40 @@ reassemble byte streams for the mini-protocols on its side. The multiplexing
 protocol (see the note below) itself is completely agnostic to the structure of
 the multiplexed data.
 
-> Note: This is not a generic, but specialized, use of multiplexing. Individual
-> mini-protocols have strict constraints on unacknowledged messages that can be
-> in flight. The design avoids the conditions in which the use of general TCP
-> over TCP multiplexing creates chaotic performance.
+:::note
 
-### Data segments of the multiplexing protocol
+This is not a generic, but specialized, use of multiplexing. Individual
+mini-protocols have strict constraints on unacknowledged messages that can be
+in flight. The design avoids the conditions in which the use of general TCP
+over TCP multiplexing creates chaotic performance.
+
+:::
+
+## Data segments of the multiplexing protocol
 
 Multiplexing data segments include the following details:
 
 - **Transmission time** ‒ a timestamp based on the lower 32 bits of the sender’s
-  monotonic clock with a resolution of one microsecond.
-- **Mini-protocol ID** ‒ the unique ID of the mini-protocol.
-- **Payload length** ‒ the size of the segment payload in bytes. The maximum
+  monotonic clock with a resolution of one microsecond
+- **Mini-protocol ID** ‒ the unique ID of the mini-protocol
+- **Payload length** ‒ the size of the segment payload in bytes; the maximum
   payload length supported by the multiplexing wire format is 216 − 1. Note that
   an instance of the protocol can choose a smaller limit for the size of
-  segments it transmits.
+  segments it transmits
 - **Mode** ‒ the single bit M (the mode) is used to distinguish the dual
   instances of a mini-protocol. The mode is set to 0 in segments from the
   initiator (the side that initially has agency), and it is set to 1 in segments
   from the responder.
 
-### Cardano node communication protocols
+## Cardano node communication protocols
 
 Cardano uses inter-process communication (IPC) protocols to allow for the
 exchange of blocks and transactions between nodes, and to allow local
 applications to interact with the blockchain via the node.
 
-#### Node-to-Node IPC overview
+### Node-to-node IPC overview
 
-The Node-to-Node (NtN) protocol transfers transactions between full nodes. NtN
+The Node-to-node (NtN) protocol transfers transactions between full nodes. NtN
 includes three mini-protocols (chain-sync, block-fetch, and tx-submission),
 which are multiplexed over a single TCP channel using a network-mux package.
 
@@ -124,9 +128,9 @@ additional protocol:
 - **keep-alive**: a protocol that ensures continuous connection between nodes
   and minimizes performance faults.
 
-#### Node-to-Client IPC overview
+### Node-to-client IPC overview
 
-Node-to-Client (NtC) is a connection between a full node and a client that
+Node-to-client (NtC) is a connection between a full node and a client that
 consumes data but does not take part in the Ouroboros protocol (a wallet, for
 example.)
 
@@ -136,7 +140,7 @@ backends or blockchain explorers. The NtC protocol enables these applications to
 access the raw chain data and to query the current ledger state, and it also
 provides the ability to submit new transactions to the system.
 
-The NtC protocol uses the same design as the Node-to-Node (NtN) protocol, but
+The NtC protocol uses the same design as the node-to-node (NtN) protocol, but
 with a different set of mini-protocols, and using local pipes rather than TCP
 connections. As such, it is a relatively low-level and narrow interface that
 exposes only what the node can provide natively. For example, the node provides
@@ -151,7 +155,7 @@ The NtC protocol consists of three mini-protocols:
 
 - **chain-sync** - used for following the chain and getting blocks
 - **local-tx-submission** - used for submitting transactions
-- **local-state-query** - used for querying the ledger state
+- **local-state-query** - used for querying the ledger state.
 
 The NtC version of chain-sync uses full blocks, rather than just block headers.
 This is why no separate block-fetch protocol is needed. The local-tx-submission
