--- a/docs/04-explore-cardano/06-fee-structure.mdx
+++ b/docs/04-explore-cardano/06-fee-structure.mdx
@@ -34,7 +34,7 @@ Fees are constructed around two constants (a and b). The formula for calculating
 minimal fees for a transaction (tx) is a \* size(tx) + b, where:
 
 - a/b are protocol parameters
-- size(tx) is the transaction size in bytes
+- size(tx) is the transaction size in bytes.
 
 ## Protocol parameters (a and b)
 
