--- a/docs/04-explore-cardano/07-monetary-policy.mdx
+++ b/docs/04-explore-cardano/07-monetary-policy.mdx
@@ -3,25 +3,24 @@ title: Cardano monetary policy
 metaTitle: Cardano monetary policy
 ---
 
-Cardano aims to achieve true decentralization with the introduction of
-Voltaire. Voltaire includes decentralized voting and
+Cardano achieves true decentralization with the Voltaire development phase, which includes decentralized voting and
 treasury systems to empower the community to influence Cardano's evolution, and
 provide a funding mechanism to transform Cardano into a self-funded,
 self-sustainable environment.
 
-True decentralization does come with its own set of challenges, as factors such
+Decentralization does come with its own set of challenges, as factors such
 as security, performance, stability, sustainability, fairness, and crucially,
 economic viability come into play.
 
 Maintaining, developing, and improving a blockchain project requires ongoing
-monetary support. When Voltaire is implemented, the Treasury will perform this
-function, and funding for new features, improvements, etc. will be allocated
+monetary support. With Voltaire, the treasury performs this
+function, and funding for new features, improvements, etc. is allocated
 through a decentralized voting system.
 
 ## Stake pools
 
 The principles of decentralization and fairness drive Cardano's development.
-Cardano wants to offer equal opportunities to anyone who wishes to become part
+Cardano offers equal opportunities to anyone who wishes to become part
 of the network by running a stake pool. But the very freedom to participate
 opens up the possibility of unfair advantage posed by larger stake pool
 operators. This presents the challenge of maintaining the integrity of the chain
@@ -44,8 +43,8 @@ delegated uniformly to the k most attractive pools.
 
 Cardano's monetary policy addresses two issues:
 
-- The necessity to offer rewards for people who participate in the network
-- Funding the treasury
+- the necessity to offer rewards for people who participate in the network
+- funding the treasury.
 
 **Rewards**
 
@@ -62,7 +61,7 @@ Staking rewards for delegators and stake pool operators come from two sources:
   treasury, and the rest is used as epoch rewards.
 
 This system is designed to ensure that the portion of rewards taken from the
-reserves is high at the beginning, when transaction numbers are still relatively
+reserves is high at the beginning when transaction numbers are still relatively
 low. This incentivizes early adopters to move quickly to benefit from high
 initial rewards. Over time, and as the number of transactions increases,
 additional fees will compensate for smaller reserves.
@@ -71,20 +70,20 @@ This mechanism also ensures that available rewards are predictable and do not
 vary dramatically. Instead, rewards change gradually. The fixed percentage taken
 from remaining reserves every epoch guarantees a smooth exponential decline.
 
-**Funding the Treasury**
+**Funding the treasury**
 
-The Treasury's goal is the provision of funds to develop Cardano activities
+The treasury's goal is the provision of funds to develop Cardano activities
 through a voting process. This necessitates a process whereby funds are
-regularly sent to the Treasury to ensure that funds are always available.
+regularly sent to the treasury to ensure that funds are always available.
 
 ## Policy rationale for the ρ and τ values
 
 A lot of thought was put into determining what the values for ρ (fixed
-percentage) and τ (funds going into the Treasury) should be.
+percentage) and τ (funds going into the treasury) should be.
 
 **Calculating ρ**
 
-While searching for the right ρ value, the team faced a quandary: A higher value would mean higher rewards for everybody initially, and the Treasury would fill faster. But higher values of ρ would also mean that the reserves would deplete faster. Paying high rewards and incentivizing early adopters is a crucial consideration, but so is to offer a long term perspective for all stakeholders. Therefore, the solution to this quandary requires a tradeoff between these two issues.
+While searching for the right ρ value, the team faced a quandary: A higher value would mean higher rewards for everybody initially, and the treasury would fill faster. But higher values of ρ would also mean that the reserves would deplete faster. Paying high rewards and incentivizing early adopters is a crucial consideration, but so is to offer a long-term perspective for all stakeholders. Therefore, the solution to this quandary requires a tradeoff between these two issues.
 
 Adopting an exponential decay approach to prevent Cardano’s reserve from running out makes sense in this situation.
 
