--- a/docs/04-explore-cardano/09-time.mdx
+++ b/docs/04-explore-cardano/09-time.mdx
@@ -40,7 +40,7 @@ In the current context, determinism means that a given transaction has a 'fixed 
 
 Blockchains are based on the principle of replicating a fixed sequence of transactions (grouped in blocks) to reach a consensus about the state of the world. All blockchains have *historical* determinism, meaning that transactions in the chain have a fixed effect, else the results of validating the chain would be non-deterministic, which would break consensus.
 
-But few blockchains have *prospective* determinism, meaning that a transaction that has not yet been added to the chain does have a fixed effect (or won't apply). Cardano does feature prospective determinism (with the current exception of pointer addresses, which are proposed to be removed in this [CIP](https://github.com/cardano-foundation/CIPs/pull/374)). You can also find out more about [Cardano's transaction cost determinism here](https://docs.cardano.org/smart-contracts/plutus/transaction-costs-determinism/). 
+But few blockchains have *prospective* determinism, meaning that a transaction that has not yet been added to the chain does have a fixed effect (or won't apply). Cardano does feature prospective determinism. You can also find out more about [Cardano's transaction cost determinism here](https://docs.cardano.org/smart-contracts/plutus/transaction-costs-determinism/). 
 
 On blockchains that do not have prospective determinism users cannot know how much gas fees they need to pay for transactions which then results in such users overpaying for transactions. The lack of prospective determinism is also why a risk exists that a transaction on such blockchains can fail while also consuming lots of gas.
 
@@ -49,11 +49,10 @@ On blockchains that do not have prospective determinism users cannot know how mu
 Prospective determinism is a very powerful feature of Cardano, for multiple reasons:
 
 * Users know, ahead of time, what a transaction will do, so there are no surprises. This is particularly relevant for scripts because users know exactly:
-
   * how the scripts will behave, and
   * how much execution budget is needed.
 * Proposed transactions can safely be processed in parallel. This parallelism is one of the reasons for Hydra's speed.
-* Because users know in advance whether a transaction will fail or not, script failures can be punished harshly (because they will never happen to non-malicious users)
+* Because users know in advance whether a transaction will fail or not, script failures can be punished harshly (because they will never happen to non-malicious users).
 * Broadly, it makes interacting with, and evolving the blockchain easier and more predictable.
 
 Prospective determinism of transactions requires that every part of transaction validation, including script execution, is completely deterministic. This is ultimately why Cardano cannot have non-deterministic operations in scripts.
@@ -66,7 +65,7 @@ Plutus scripts get access to the transaction validity range, defined by its crea
 
 The script can assume that the actual time of validation is in this range. Otherwise, the transaction will fail in [phase 1](https://iohk.io/en/blog/posts/2021/09/07/no-surprises-transaction-validation-part-2/) before script execution. This ensures determinism since the script will _always_ see the same piece of information (the validity range) regardless of when the script is validated, so the behavior will be the same.
 
-The limits of the validity interval are expressed in real time (POSIXTime), rather than slots, and the conversion from slots to real time is done by consensus, as discussed in the previous post. Using real time rather than slots is important because slot lengths can change at a hard fork, so assumptions based on counting slots are generally unreliable. The fact that scripts see the validity range allows the scripts to make assertions like 'the current time is before/after some given time', but it does not enable a script to make any other kind of assertion ('the second in which this transaction is validated is even', for example.)
+The limits of the validity interval are expressed in real time (POSIXTime), rather than slots, and the conversion from slots to real time is done by consensus. Using real time rather than slots is important because slot lengths can change at a hard fork, so assumptions based on counting slots are generally unreliable. The fact that scripts see the validity range allows the scripts to make assertions like 'the current time is before/after some given time', but it does not enable a script to make any other kind of assertion ('the second in which this transaction is validated is even', for example.)
 
 In Alonzo's original design, the validity range covered all known uses of time, while also fitting neatly with the existing time-to-live (TTL) field. In theory, it is possible to apply the same principles to other kinds of assertions, for example – let the script rely on assertions checked in phase 1. However, this would not be easy as it implies deep structural changes to various parts of the Cardano network. And because phase 1 checks need to be valid for every node across the network, this precludes any kind of assertion that depends on some local condition, like 'Current Time'.
 
@@ -102,8 +101,6 @@ Finally, layer 2 networks such as Hydra, can provide increased accuracy through 
 
 ## Conclusion
 
-Time _is_ a complex topic, especially in a decentralized blockchain setting. These blog posts show that there is a clear notion of on-chain time on Cardano with specific constraints and available improvement options in the longer term.
+Time _is_ a complex topic, especially in a decentralized blockchain setting. There is a clear notion of on-chain time on Cardano with specific constraints and available improvement options in the longer term.
 
 On-chain time behaves in a somewhat different way from the time in traditional software. This divergence is defined in a consistent way to address system constraints while ensuring security and usability for end-users and stake pool operators. Moreover, Cardano's measure of time appears to be good enough to cover multiple use cases, even when compared to traditional finance uses.
-
-Join [Discord community channels](https://discord.com/channels/826816523368005654/826816523964383263) for further discussions of time handling on Cardano and potential use cases that are not mentioned here.
