Update and rename 11-relevant-research-papers.mdx to 12-relevant-research-papers.mdx

--- a/docs/04-explore-cardano/12-relevant-research-papers.mdx
+++ b/docs/04-explore-cardano/12-relevant-research-papers.mdx
@@ -22,7 +22,7 @@ scalability, and governance of a pioneering blockchain environment. Relevant
 research papers and specifications according to the Cardano development roadmap
 are outlined below.
 
-### Byron
+## Byron
 
 A period dedicated to building a foundational federated network that enabled the
 purchase and sale of ada. The network ran the proof-of-stake Ouroboros consensus
@@ -44,7 +44,7 @@ protocol.
 
 [Small Step Semantics for Cardano](https://github.com/input-output-hk/cardano-ledger/releases/latest/download/small-step-semantics.pdf)
 
-### Shelley
+## Shelley
 
 A period of growth and development for the network focused on ensuring greater
 decentralization, which will lead to enhanced security and a more robust
@@ -72,7 +72,7 @@ environment once the majority of nodes are run by network participants.
 
 [A Specification of the Non-Integral Calculations in the Shelley Ledger](https://github.com/input-output-hk/cardano-ledger/releases/latest/download/non-integer-calculations.pdf)
 
-### Goguen
+## Goguen
 
 The Goguen era will introduce smart-contract functionality to build
 decentralized applications while supporting multi-functional assets, fungible,
@@ -107,7 +107,7 @@ Multi-Asset Implementation](https://github.com/input-output-hk/cardano-ledger/re
 
 [A Formal Specification of the Cardano Ledger integrating Plutus Core](https://github.com/input-output-hk/cardano-ledger/releases/latest/download/alonzo-ledger.pdf "A Formal Specification of the Cardano Ledger integrating Plutus Core")
 
-### Basho
+## Basho
 
 An era of optimization, improving the scalability and interoperability of the
 network. Enhancing the network performance, Basho will introduce _sidechains_,
@@ -132,7 +132,7 @@ potential to extend the network’s capabilities.
 
 [Formal Specification of the Cardano Ledger for the Babbage era](https://github.com/input-output-hk/cardano-ledger/releases/latest/download/babbage-ledger.pdf "Formal Specification of the Cardano Ledger for the Babbage era")
 
-### Voltaire
+## Voltaire
 
 A development era enabling the Cardano network to become a self-sustaining
 system. Voltaire will introduce a voting and treasury system that will enable
