--- a/docs/04-explore-cardano/03-cardano-architecture.mdx
+++ b/docs/04-explore-cardano/03-cardano-architecture.mdx
@@ -43,7 +43,7 @@ Nodes are responsible for:
 
 The `cardano-node` is the top level Cardano component that consists of the other
 subsystems, of which the most significant are [consensus](https://github.com/IntersectMBO/ouroboros-consensus?tab=readme-ov-file#ouroboros-consensus),
-[ledger](https://github.com/IntersectMBO/cardano-ledger?tab=readme-ov-file#cardano-ledger)
+[ledger](https://github.com/IntersectMBO/cardano-ledger?tab=readme-ov-file#cardano-ledger),
 and [networking](https://github.com/IntersectMBO/ouroboros-network?tab=readme-ov-file#ouroboros-network) with ancillary configuration, CLI, logging, and monitoring.
 
 ### Node-to-node IPC protocol
