--- a/docs/04-explore-cardano/03-cardano-architecture.mdx
+++ b/docs/04-explore-cardano/03-cardano-architecture.mdx
@@ -139,7 +139,7 @@ to integrate Cardano with other applications and systems.
 
 ## Cardano DB Sync
 
-The cardano node stores only the blockchain itself and the associated information
+The Cardano node stores only the blockchain itself and the associated information
 needed to validate the blockchain. This design principle is about minimizing
 code complexity (and reducing computational cost and resource use) to keep the
 node's local interfaces as minimal as possible and to use external clients to
