--- a/docs/04-explore-cardano/04-cardano-network/index.mdx
+++ b/docs/04-explore-cardano/04-cardano-network/index.mdx
@@ -142,7 +142,7 @@ communication is canceled in the following scenarios:
 - when either side receives a message that is not expected according to the
   protocol.
 
-All mini protocols based on this framework include the following information in
+All mini-protocols based on this framework include the following information in
 their description:
 
 - an informal description of the protocol
